Upgrade to Java 11 (#6515)
- Added Jakarata XML and Activation replacements
- Upgraded maven-bundle-plugin and exec-maven-plugin
- Upgraded JUnit, Mockito, Restassured, Spock, and Groovy
- Updated documentation
- Upgraded Asciidoc
- Updated Jenkins file to use JDK11
- Removed dependency on acdebugger due to it depending on tools.jar which was removed by JEP 220
- Disabled pro-grade and security policy
- Removed Codice JUnit and Spock extensions